crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@structs__simple_optimized.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for structs/simple_optimized.cm
input_file: test_data/structs/simple_optimized.cm
---
Fixture: structs/simple_optimized.cm
============================================================
Source code:
struct Point {
    x: felt,
    y: felt,
}

fn main() -> felt {
    let p = Point { x: 10, y: 20 };
    let sum = p.x + p.y;
    return sum;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %7 = 10 Add 20
      return %7

  }

}
